[package]
name = "tonnageCalculatorAPI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
futures = "0.3"
serde = "1.0.136"
serde_json = "1.0.79"
